--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,76 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="csY-rg-dpS">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kuv-Rf-jbV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="3Va-a0-ZvU"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="csY-rg-dpS" firstAttribute="top" secondItem="Kuv-Rf-jbV" secondAttribute="bottom" id="2Ng-s6-oJI"/>
+                            <constraint firstItem="Kuv-Rf-jbV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3bC-5z-Ehg"/>
+                            <constraint firstItem="csY-rg-dpS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AkV-D2-Bnu"/>
+                            <constraint firstItem="Kuv-Rf-jbV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kae-bS-1SV"/>
+                            <constraint firstItem="csY-rg-dpS" firstAttribute="top" secondItem="Kuv-Rf-jbV" secondAttribute="bottom" id="ZGB-Hs-oTt"/>
+                            <constraint firstItem="csY-rg-dpS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c78-aj-Cdl"/>
+                            <constraint firstItem="Kuv-Rf-jbV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fY3-Oz-WDp"/>
+                            <constraint firstItem="csY-rg-dpS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="qM7-8y-Jne"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="Dpa-h1-gmi" kind="presentation" id="VS7-3Y-dQD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="38K-hD-ZZw">
+            <objects>
+                <viewController id="n9l-1r-GqE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZSA-lh-wrZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="YfV-ZV-XvH"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="eEy-7F-ZWv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pBT-vm-z8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1385" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h3t-nx-Clm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dpa-h1-gmi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hhv-5V-5A5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="n9l-1r-GqE" kind="relationship" relationship="rootViewController" id="xfC-2l-wd9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ghZ-uD-zFc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="134"/>
         </scene>
     </scenes>
 </document>
