--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Task Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TaskHomeViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -43,6 +43,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="csY-rg-dpS" id="NnL-X7-lra"/>
                         <segue destination="Dpa-h1-gmi" kind="presentation" id="VS7-3Y-dQD"/>
                     </connections>
                 </viewController>
@@ -50,21 +51,36 @@
             </objects>
             <point key="canvasLocation" x="-79.200000000000003" y="133.5832083958021"/>
         </scene>
-        <!--View Controller-->
+        <!--Task Detail View Controller-->
         <scene sceneID="38K-hD-ZZw">
             <objects>
-                <viewController id="n9l-1r-GqE" sceneMemberID="viewController">
+                <viewController id="n9l-1r-GqE" customClass="TaskDetailViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZSA-lh-wrZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zWB-CZ-R4Z">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zWB-CZ-R4Z" firstAttribute="leading" secondItem="YfV-ZV-XvH" secondAttribute="leading" id="6Ye-20-Cxk"/>
+                            <constraint firstItem="zWB-CZ-R4Z" firstAttribute="trailing" secondItem="YfV-ZV-XvH" secondAttribute="trailing" id="mJc-4H-FjU"/>
+                            <constraint firstItem="zWB-CZ-R4Z" firstAttribute="bottom" secondItem="YfV-ZV-XvH" secondAttribute="bottom" id="naT-3q-Mkd"/>
+                            <constraint firstItem="zWB-CZ-R4Z" firstAttribute="top" secondItem="YfV-ZV-XvH" secondAttribute="top" id="wq5-nG-3hi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="YfV-ZV-XvH"/>
                     </view>
                     <navigationItem key="navigationItem" id="eEy-7F-ZWv"/>
+                    <connections>
+                        <outlet property="tableView" destination="zWB-CZ-R4Z" id="alx-gt-BUj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pBT-vm-z8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1385" y="134"/>
+            <point key="canvasLocation" x="1384.8" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="h3t-nx-Clm">
