--- a/TaskApp/TaskHome/AddTaskTableViewCell.xib
+++ b/TaskApp/TaskHome/AddTaskTableViewCell.xib
@@ -13,27 +13,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AddTaskTableViewCell" customModule="TaskApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="AddTaskTableViewCell" customModule="TaskApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ogW-hZ-vlc">
-                        <rect key="frame" x="12" y="11" width="22" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pF-kS-mdo">
+                        <rect key="frame" x="9" y="2" width="20" height="38.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ya-bs-67D">
+                        <rect key="frame" x="37" y="6" width="283" height="35"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="22" id="Lvz-Wo-ybd"/>
-                            <constraint firstAttribute="height" constant="22" id="vgZ-N9-5hY"/>
-                        </constraints>
-                        <connections>
-                            <action selector="addTask:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="UK5-8I-QMf"/>
-                        </connections>
-                    </button>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ya-bs-67D">
-                        <rect key="frame" x="42" y="6" width="278" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="0ya-bs-67D" secondAttribute="height" multiplier="139:15" id="87C-8F-uOK"/>
+                            <constraint firstAttribute="width" secondItem="0ya-bs-67D" secondAttribute="height" multiplier="283:35" id="CLn-pX-Y7I"/>
                         </constraints>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -41,11 +37,12 @@
                     </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0ya-bs-67D" firstAttribute="leading" secondItem="ogW-hZ-vlc" secondAttribute="trailing" constant="8" id="9s3-VI-1tt"/>
-                    <constraint firstItem="0ya-bs-67D" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="NxV-pv-dzW"/>
-                    <constraint firstItem="ogW-hZ-vlc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="Vv8-VE-3b9"/>
-                    <constraint firstAttribute="trailing" secondItem="0ya-bs-67D" secondAttribute="trailing" id="pRF-Zh-2Zh"/>
-                    <constraint firstItem="ogW-hZ-vlc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="ukG-ae-QAj"/>
+                    <constraint firstItem="0ya-bs-67D" firstAttribute="leading" secondItem="6pF-kS-mdo" secondAttribute="trailing" constant="8" id="3C1-SW-SIl"/>
+                    <constraint firstItem="6pF-kS-mdo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="53E-aH-qV9"/>
+                    <constraint firstItem="6pF-kS-mdo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="7BN-Wb-3gt"/>
+                    <constraint firstAttribute="trailing" secondItem="0ya-bs-67D" secondAttribute="trailing" id="D6p-72-dpu"/>
+                    <constraint firstItem="0ya-bs-67D" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="iea-ZK-6aB"/>
+                    <constraint firstAttribute="bottom" secondItem="0ya-bs-67D" secondAttribute="bottom" constant="2.5" id="mgm-vf-KVV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
