--- a/TaskApp/TaskHome/TaskListTableViewCell.xib
+++ b/TaskApp/TaskHome/TaskListTableViewCell.xib
@@ -30,7 +30,7 @@
                             <action selector="doneAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Usf-J9-f6T"/>
                         </connections>
                     </button>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oR8-U9-KOq">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oR8-U9-KOq">
                         <rect key="frame" x="42" y="6" width="278" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="oR8-U9-KOq" secondAttribute="height" multiplier="55:6" constant="3" id="EAE-Yw-Zzc"/>
