--- a/TaskApp/TaskDetail/NoteTableViewCell.xib
+++ b/TaskApp/TaskDetail/NoteTableViewCell.xib
@@ -37,6 +37,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="textView" destination="2a9-aJ-pOx" id="vrr-lQ-0Wo"/>
+            </connections>
             <point key="canvasLocation" x="136" y="105.5"/>
         </tableViewCell>
     </objects>
